[gd_scene load_steps=6 format=3 uid="uid://b6iv2f3j0rc0u"]

[ext_resource type="Script" path="res://Main_meny/main_menu.gd" id="1_imas2"]
[ext_resource type="FontFile" uid="uid://dp65l0t5mj3aw" path="res://assets/font/RubikSprayPaint-Regular.ttf" id="2_aak17"]
[ext_resource type="VideoStream" path="res://assets/fire.ogv" id="2_sxabt"]
[ext_resource type="Theme" uid="uid://bvvrw01t671fc" path="res://assets/button1.tres" id="3_6aoc4"]

[sub_resource type="SystemFont" id="SystemFont_egsxq"]
font_names = PackedStringArray("Impact")

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_imas2")

[node name="VideoBG" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("2_sxabt")
autoplay = true
expand = true
loop = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 65

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.670588, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.25098, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("2_aak17")
theme_override_font_sizes/font_size = 64
text = "Game Title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Separator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Separator3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Start_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme = ExtResource("3_6aoc4")
theme_override_fonts/font = SubResource("SystemFont_egsxq")
theme_override_font_sizes/font_size = 24
text = "Start the loop"

[node name="Options_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme = ExtResource("3_6aoc4")
theme_override_fonts/font = SubResource("SystemFont_egsxq")
theme_override_font_sizes/font_size = 24
text = "Change the loop"

[node name="Exit_Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
theme = ExtResource("3_6aoc4")
theme_override_fonts/font = SubResource("SystemFont_egsxq")
theme_override_font_sizes/font_size = 24
text = "Exit the loop"

[connection signal="button_down" from="MarginContainer/HBoxContainer/VBoxContainer/Start_Button" to="." method="_on_start_button_button_down"]
[connection signal="button_down" from="MarginContainer/HBoxContainer/VBoxContainer/Options_Button" to="." method="_on_start_button_button_down"]
[connection signal="button_down" from="MarginContainer/HBoxContainer/VBoxContainer/Exit_Button" to="." method="_on_exit_button_button_down"]
